# spdlog-mini

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  example.cpp
include/spdlog/: async_logger-inl.h  async_logger.h  common-inl.h  logger-inl.h  pattern_formatter-inl.h  spdlog-inl.h
include/spdlog/details/: backtracer-inl.h  backtracer.h  file_helper.h  fmt_helper.h  log_msg-inl.h  log_msg.h  log_msg_buffer.h  os-inl.h  os.h  registry-inl.h  registry.h  thread_pool-inl.h  thread_pool.h
include/spdlog/fmt/: bin_to_hex.h  chrono.h  ostr.h  ranges.h  xchar.h
include/spdlog/fmt/bundled/: core.h  format-inl.h  format.h
include/spdlog/sinks/: ansicolor_sink-inl.h  base_sink.h  stdout_color_sinks-inl.h  stdout_sinks-inl.h  stdout_sinks.h
spdlog/: common.h  logger.h  pattern_formatter.h  spdlog.h  tweakme.h
spdlog/details/: file_helper-inl.h  log_msg_buffer-inl.h  periodic_worker-inl.h  periodic_worker.h
spdlog/fmt/: compile.h  fmt.h
spdlog/fmt/bundled/: chrono.h  os.h
spdlog/sinks/: ansicolor_sink.h  base_sink-inl.h  basic_file_sink-inl.h  basic_file_sink.h  daily_file_sink.h  hourly_file_sink.h  rotating_file_sink-inl.h  rotating_file_sink.h  sink-inl.h  sink.h  stdout_color_sinks.h
